[Fix] Use our own danger buttons in Network page and improve their color contrast

--- a/portal-parent/ozwillo-portal-front/src/main/resources/public/css/specific.css
+++ b/portal-parent/ozwillo-portal-front/src/main/resources/public/css/specific.css
@@ -200,7 +200,7 @@ label.required {
 }
 
 .oz-btn-danger {
-    background-color: #e8165b;
+    background-color: #e81627;
     color: #fff;
     border: none;
 }
